<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:fillViewport="false">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/squat_mate_logo"
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:scaleType="centerCrop"
            android:src="@drawable/squat_mate"
            android:contentDescription="@string/squat_mate_logo" />

        <TextView
            android:id="@+id/knee_safety_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/squat_safety_knee"
            android:padding="10dp"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/knee_safety_body"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/squat_safety_knee_info"
            android:padding="10dp"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/back_safety_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/squat_safety_back"
            android:padding="10dp"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/back_safety_body"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/squat_safety_back_info"
            android:padding="10dp"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/fail_safety_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/squat_safety_fail"
            android:padding="10dp"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/fail_safety_body"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/squat_safety_fail_info"
            android:padding="10dp"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <Button
            android:id="@+id/back_button_safety"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="goBack"
            android:padding="10dp"
            android:text="Return to learn about squats" />
    </LinearLayout>
</ScrollView>